# tailscale-proxy

./: .gitignore  GEMINI.md  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
assets/: 9proxy-linux-debian-amd64.deb
docs/: 9proxy-setup-notes.md  FRIEND-QUICKSTART.md  MANUAL-SETUP.md  SECURITY.md  USAGE.md
src/proxy_tailscale/: cli.py  ip_reputation.py
